--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 black==24.4.2
 fire==0.6.0
 google-generativeai == 0.5.4
-PyPDF2 == 3.0.1
+pypdf == 4.2.0
 pytest==8.2.0
 pytest-cov==5.0.0
 pylint==3.2.0
