--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -21,3 +21,10 @@ jobs:
     - name: Format code
       run: |
         make format
+    - name: Build Container
+      run: |
+        make build
+    - name: Run Container
+      run: |
+        make run
+    
